[package]
name = "passkey-controller"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/peitalin/near-reveries"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
near-sdk = { version = "5.14.0" }
serde = { version = "1.0.219", features = ["derive"] }
schemars = "0.8"
near-abi = "0.4.3"

[dev-dependencies]
near-sdk = { version = "5.14.0", features = ["unit-testing"] }
serde_json = "1"