[package]
name = "passkey-controller"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/peitalin/near-reveries"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
borsh = { version = "1.5.7", features = ["derive"] }
near-sdk = { version = "5.14.0"}
serde = "1"
schemars = "0.8"

[dev-dependencies]
near-sdk = { version = "5.14.0", features = ["unit-testing"] }
serde_json = "1"

